--- a/index.html
+++ b/index.html
@@ -112,56 +112,302 @@
         <div class="container">
             <div class="section-title">
                 <h2>Nuestros Servicios</h2>
-                <p>Cubrimos todas tus necesidades de gestión vehicular</p>
+                <p>Gestión especializada en CDMX, Estado de México, Morelos, Guerrero, Michoacán y Oaxaca.</p>
+                <div class="partners-grid">
+                    <img src="assets/images/partners/cdmx.png" alt="CDMX">
+                    <img src="assets/images/partners/edomex.png" alt="Estado de Mexico">
+                    <img src="assets/images/partners/morelos.png" alt="Morelos">
+                    <img src="assets/images/partners/guerrero.png" alt="Guerrero">
+                    <img src="assets/images/partners/michoacan.png" alt="Michoacan">
+                    <img src="assets/images/partners/oaxaca.png" alt="Oaxaca">
+                </div>
             </div>
 
-            <div class="services-grid">
-                <div class="service-item">
-                    <div class="service-icon"><i class="fas fa-car"></i></div>
-                    <div>
-                        <h4>Alta de Placas</h4>
-                        <small>Autos nuevos, usados y antiguos</small>
+            <!-- Service Tabs Control -->
+            <div class="services-tabs">
+                <button class="tab-btn active" data-tab="control">Placas & Trámites</button>
+                <button class="tab-btn" data-tab="licencias">Licencias</button>
+                <button class="tab-btn" data-tab="otros">Licencias<br>Legalizaciones y REPUVE</button>
+            </div>
+
+            <!-- Tab Content: Control Vehicular -->
+            <div class="tab-content active" id="control">
+                <div class="services-grid">
+                    <!-- Alta Premium Card -->
+                    <div class="service-item premium-item">
+                        <div class="service-header">
+                            <div class="service-icon"><i class="fas fa-car-side"></i></div>
+                            <div>
+                                <h4>Alta de Placas</h4>
+                                <small>Todas las clasificaciones</small>
+                            </div>
+                        </div>
+                        <div class="service-tags">
+                            <span class="tag"><i class="fas fa-car"></i> Particular</span>
+                            <span class="tag"><i class="fas fa-motorcycle"></i> Moto</span>
+                            <span class="tag"><i class="fas fa-award"></i> Antiguo</span>
+                            <span class="tag"><i class="fas fa-wheelchair"></i> Discapacidad</span>
+                            <span class="tag"><i class="fas fa-trailer"></i> Remolque</span>
+                        </div>
                     </div>
-                </div>
-                <div class="service-item">
-                    <div class="service-icon"><i class="fas fa-exchange-alt"></i></div>
-                    <div>
-                        <h4>Cambio de Propietario</h4>
-                        <small>Actualiza la tarjeta de circulación</small>
+
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-globe-americas"></i></div>
+                        <div>
+                            <h4>Alta Foránea</h4>
+                            <small>Emplacamiento de otras entidades</small>
+                        </div>
                     </div>
-                </div>
-                <div class="service-item">
-                    <div class="service-icon"><i class="fas fa-id-card"></i></div>
-                    <div>
-                        <h4>Licencias de Conducir</h4>
-                        <small>Expedición y renovación</small>
+
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-exchange-alt"></i></div>
+                        <div>
+                            <h4>Cambio de Propietario</h4>
+                            <small>Actualización de titularidad</small>
+                        </div>
                     </div>
-                </div>
-                <div class="service-item">
-                    <div class="service-icon"><i class="fas fa-file-invoice-dollar"></i></div>
-                    <div>
-                        <h4>Pago de Tenencias</h4>
-                        <small>Regularización de adeudos</small>
+
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-sync-alt"></i></div>
+                        <div>
+                            <h4>Renovación y Canje</h4>
+                            <small>Actualización de vigencia</small>
+                        </div>
                     </div>
-                </div>
-                <div class="service-item">
-                    <div class="service-icon"><i class="fas fa-passport"></i></div>
-                    <div>
-                        <h4>Permisos Provisionales</h4>
-                        <small>Circula sin placas legalmente</small>
+
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-id-card-alt"></i></div>
+                        <div>
+                            <h4>Reposición de Tarjeta</h4>
+                            <small>Recuperación por extravío</small>
+                        </div>
                     </div>
-                </div>
-                <div class="service-item">
-                    <div class="service-icon"><i class="fas fa-truck-pickup"></i></div>
-                    <div>
-                        <h4>Baja de Placas</h4>
-                        <small>Por robo o siniestro</small>
+
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-arrow-down"></i></div>
+                        <div>
+                            <h4>Baja General</h4>
+                            <small>Cese de obligaciones</small>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <!-- Tab Content: Licencias -->
+            <div class="tab-content" id="licencias">
+                <div class="services-grid">
+                    <!-- Licencia Premium Card -->
+                    <div class="service-item premium-item">
+                        <div class="service-header">
+                            <div class="service-icon"><i class="fas fa-id-card"></i></div>
+                            <div>
+                                <h4>Licencias de Conducir</h4>
+                                <small>Todos los tipos y clasificaciones</small>
+                            </div>
+                        </div>
+                        <div class="service-tags">
+                            <span class="tag"><i class="fas fa-car"></i> Tipo A</span>
+                            <span class="tag"><i class="fas fa-truck"></i> Tipo B</span>
+                            <span class="tag"><i class="fas fa-bus"></i> Tipo C</span>
+                            <span class="tag"><i class="fas fa-infinity"></i> Permanente</span>
+                            <span class="tag"><i class="fas fa-motorcycle"></i> Motociclista</span>
+                        </div>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-sync-alt"></i></div>
+                        <div>
+                            <h4>Renovación de Licencia</h4>
+                            <small>Actualización de vigencia</small>
+                        </div>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-id-card-alt"></i></div>
+                        <div>
+                            <h4>Reposición de Licencia</h4>
+                            <small>Recuperación por extravío</small>
+                        </div>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-passport"></i></div>
+                        <div>
+                            <h4>Permisos Provisionales</h4>
+                            <small>Para circular sin placas</small>
+                        </div>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-exchange-alt"></i></div>
+                        <div>
+                            <h4>Canje de Licencia</h4>
+                            <small>Actualización de tipo</small>
+                        </div>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-file-medical"></i></div>
+                        <div>
+                            <h4>Examen Médico</h4>
+                            <small>Certificado de aptitud</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tab Content: Otros -->
+            <div class="tab-content" id="otros">
+                <div class="services-grid">
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-shipping-fast"></i></div>
+                        <div>
+                            <h4>Envíos a toda la República</h4>
+                            <small>Sin salir de casa. Nosotros hacemos todo el trámite por ti. Rápido, seguro y
+                                confiable. Cobertura nacional garantizada.</small>
+                        </div>
+                    </div>
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-file-contract"></i></div>
+                        <div>
+                            <h4>Legalizaciones</h4>
+                            <small>Regularización de extranjeros</small>
+                        </div>
+                    </div>
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-barcode"></i></div>
+                        <div>
+                            <h4>REPUVE</h4>
+                            <small>Inscripción, regularización, aduana y decreto</small>
+                        </div>
+                    </div>
+                    <div class="service-item">
+                        <div class="service-icon"><i class="fas fa-search"></i></div>
+                        <div>
+                            <h4>Reportes de Extravío</h4>
+                            <small>Gestión de actas</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tabs Script -->
+            <script>
+                document.querySelectorAll('.tab-btn').forEach(button => {
+                    button.addEventListener('mouseover', () => {
+                        // Remove active class from all
+                        document.querySelectorAll('.tab-btn').forEach(btn => btn.classList.remove('active'));
+                        document.querySelectorAll('.tab-content').forEach(content => content.classList.remove('active'));
+
+                        // Add active class to hovered
+                        button.classList.add('active');
+                        document.getElementById(button.dataset.tab).classList.add('active');
+                    });
+                });
+            </script>
         </div>
     </section>
 
+    <!-- Google Reviews Section -->
+    <section class="section-padding reviews-section">
+        <div class="container">
+            <div class="section-title">
+                <h2>La Confianza de Nuestros Clientes</h2>
+                <p>Reseñas reales de Google Maps</p>
+            </div>
+
+            <div class="reviews-grid">
+                <!-- Review Card 1 -->
+                <div class="review-card">
+                    <div class="review-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p class="review-text">"Excelente servicio! Tramitaron mi alta de placas muy rápido y sin
+                        complicaciones. Totalmente recomendable."</p>
+                    <div class="review-author">
+                        <img src="https://ui-avatars.com/api/?name=Cliente+1&background=2563eb&color=fff&size=40"
+                            alt="Cliente 1">
+                        <span>Cliente 1</span>
+                    </div>
+                </div>
+
+                <!-- Review Card 2 -->
+                <div class="review-card">
+                    <div class="review-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p class="review-text">"Muy profesionales. Me ayudaron con el cambio de propietario de mi auto sin
+                        ningún problema."</p>
+                    <div class="review-author">
+                        <img src="https://ui-avatars.com/api/?name=Cliente+2&background=2563eb&color=fff&size=40"
+                            alt="Cliente 2">
+                        <span>Cliente 2</span>
+                    </div>
+                </div>
+
+                <!-- Review Card 3 -->
+                <div class="review-card">
+                    <div class="review-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p class="review-text">"Atención de primera. Resolvieron todas mis dudas y todo el proceso fue muy
+                        transparente."</p>
+                    <div class="review-author">
+                        <img src="https://ui-avatars.com/api/?name=Cliente+3&background=2563eb&color=fff&size=40"
+                            alt="Cliente 3">
+                        <span>Cliente 3</span>
+                    </div>
+                </div>
+
+                <!-- Review Card 4 -->
+                <div class="review-card">
+                    <div class="review-stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p class="review-text">"Rapidísimo y confiable. Sin salir de casa me tramitaron todo. ¡Súper
+                        recomendado!"</p>
+                    <div class="review-author">
+                        <img src="https://ui-avatars.com/api/?name=Cliente+4&background=2563eb&color=fff&size=40"
+                            alt="Cliente 4">
+                        <span>Cliente 4</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="google-badge">
+                <i class="fab fa-google"></i>
+                <div>
+                    <strong>5.0</strong> <span>calificación en Google</span>
+                </div>
+            </div>
+
+            <div class="google-cta">
+                <a href="https://maps.app.goo.gl/HEGvNwtQ4kYn3rpS7" target="_blank" rel="noopener noreferrer"
+                    class="btn-google-review">
+                    <i class="fas fa-star"></i>
+                    Ver Todas las Reseñas Reales en Google Maps
+                    <i class="fas fa-external-link-alt"></i>
+                </a>
+                <p class="verify-text">✓ Verifica por ti mismo - 100% reseñas auténticas</p>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Footer -->
