--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="services-tabs">
                 <button class="tab-btn active" data-tab="control">Placas & Trámites</button>
                 <button class="tab-btn" data-tab="licencias">Licencias</button>
-                <button class="tab-btn" data-tab="otros">Licencias<br>Legalizaciones y REPUVE</button>
+                <button class="tab-btn" data-tab="otros">Legalizaciones y REPUVE</button>
             </div>
 
             <!-- Tab Content: Control Vehicular -->
