--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestoría Vehicular CDMX y Edomex | Trámites Rápidos y Seguros</title>
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <meta name="description"
         content="Gestoría vehicular #1 en CDMX y Edomex. Placas, Cambio de Propietario, Legalización de Autos Americanos y Licencias. ¡Trámites sin filas y 100% seguros!">
     <meta name="keywords"
@@ -110,6 +111,8 @@
         </div>
     </header>
 
+
+
     <main>
         <!-- Hero Section -->
         <section id="inicio" class="hero">
@@ -119,8 +122,9 @@
                             class="hidden-mobile"><span style="font-weight: 400; font-size: 0.8em;">¡Pon tus trámites
                             sobre
                             ruedas!</span></h1>
-                    <p>Olvídate de filas y estrés. Expertos en altas, bajas, legalización y cambios de propietario en la
-                        Zona Metropolitana.</p>
+                    <p><strong>¿Moto o Auto nuevos?</strong> Olvídate de filas y estrés. Somos Expertos en altas, bajas,
+                        legalización y cambios de propietario en la Zona Metropolitana entre otros estados de la
+                        república.</p>
                     <div class="hero-buttons">
                         <a href="https://wa.me/525535757364?text=Hola,%20necesito%20ayuda%20con%20un%20trámite"
                             class="btn btn-whatsapp" target="_blank" aria-label="Cotizar trámite por WhatsApp">
@@ -155,13 +159,10 @@
 
                 <div class="hero-visual hidden-mobile">
                     <!-- Overlapping composition -->
-                    <div class="hero-image-stack">
-                        <img src="assets/images/cars-showcase-1.png" alt="Auto Deportivo Gestor de Autos"
-                            class="hero-car">
-                        <img src="assets/images/moto-deportiva-azul.png" alt="Moto Deportiva Gestor de Autos"
-                            class="hero-moto">
-                    </div>
+                    <img src="assets/images/moto-deportiva-azul.png" alt="Moto Deportiva Gestor de Autos"
+                        class="hero-moto">
                 </div>
+            </div>
             </div>
         </section>
 
@@ -424,8 +425,12 @@
             <div class="container">
                 <div class="section-title">
                     <h2>La Confianza de Nuestros Clientes</h2>
-                    <p><i class="fas fa-map-marker-alt google-maps-icon"></i> Reseñas reales de Google Maps</p>
+                    <p><i class="fas fa-map-marker-alt google-maps-icon"
+                            style="background: linear-gradient(145deg, #ffd700 0%, #ffed4e 25%, #c5a000 50%, #ffed4e 75%, #ffd700 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; filter: drop-shadow(0 2px 4px rgba(255, 215, 0, 0.5)); font-size: 1.1em;"></i>
+                        Reseñas reales de Google Maps</p>
                 </div>
+
+
 
                 <div class="reviews-slider-container">
                     <!-- Navigation Arrows -->
@@ -667,20 +672,32 @@
                     </div>
                 </div>
 
-                <div class="google-badge premium-badge">
-                    <div class="google-logo">
-                        <span class="g-blue">G</span><span class="g-red">o</span><span class="g-yellow">o</span><span
-                            class="g-blue">g</span><span class="g-green">l</span><span class="g-red">e</span>
+                <div
+                    style="display: flex; align-items: center; justify-content: center; gap: 2rem; flex-wrap: wrap; margin: 2rem 0;">
+                    <!-- Car Image Compact -->
+                    <div style="max-width: 550px; flex-shrink: 0;">
+                        <img src="assets/images/carros.jpg" alt="Flota de vehículos"
+                            style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08);"
+                            loading="lazy" decoding="async">
                     </div>
-                    <div class="badge-subtitle">Verified Reviews</div>
-                    <div class="badge-stars">
-                        <span class="score-text">5.0</span>
-                        <i class="fas fa-check-circle check-icon"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
+
+                    <!-- Google Badge -->
+                    <div class="google-badge premium-badge">
+                        <div class="google-logo">
+                            <span class="g-blue">G</span><span class="g-red">o</span><span
+                                class="g-yellow">o</span><span class="g-blue">g</span><span
+                                class="g-green">l</span><span class="g-red">e</span>
+                        </div>
+                        <div class="badge-subtitle">Verified Reviews</div>
+                        <div class="badge-stars">
+                            <span class="score-text">5.0</span>
+                            <i class="fas fa-check-circle check-icon"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
                     </div>
                 </div>
 
@@ -728,9 +745,11 @@
         <button class="close-gold" aria-label="Cerrar recursos"><i class="fas fa-times"></i></button>
         <div class="gold-header">
             <i class="fas fa-gem gold-icon"></i>
-            <h3>Te podría interesar</h3>
+            <h3
+                style="font-size: 2rem; font-weight: 700; background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; margin-bottom: 0.5rem;">
+                Te podría interesar</h3>
         </div>
-        <p class="gold-subtitle">Información valiosa para tu tranquilidad.</p>
+        <p class="gold-subtitle">Recursos oficiales que te ayudarán</p>
 
         <div class="gold-links">
             <a href="https://sedema.cdmx.gob.mx/programas/programa/verificacion-vehicular" target="_blank"
@@ -753,6 +772,15 @@
                 <i class="fas fa-search-dollar"></i> Consulta Infracciones
             </a>
         </div>
+    </div>
+
+    </div>
+
+    <!-- Gold Certificate Badge -->
+    <div style="display: flex; justify-content: flex-start; margin-bottom: 2rem;">
+        <img src="assets/images/gold.png" alt="Certificación Premium - Gestoría Vehicular"
+            style="max-width: 200px; width: 100%; height: auto; filter: drop-shadow(0 4px 12px rgba(0,0,0,0.15));"
+            loading="lazy" decoding="async">
     </div>
 
     <!-- Footer -->
@@ -939,13 +967,24 @@
             const goldPopup = document.getElementById('goldPopup');
             const closeGold = document.querySelector('.close-gold');
 
-            // Show Gold Popup after 1.5s (Staggered)
-            setTimeout(() => {
-                goldPopup.classList.remove('hidden');
-                requestAnimationFrame(() => {
-                    goldPopup.classList.add('visible');
-                });
-            }, 1500);
+            // Scroll Trigger Logic for Gold Popup
+            const triggerText = document.querySelector('.verify-text');
+            if (triggerText && goldPopup) {
+                const observer = new IntersectionObserver((entries) => {
+                    entries.forEach(entry => {
+                        if (entry.isIntersecting) {
+                            goldPopup.classList.remove('hidden');
+                            requestAnimationFrame(() => {
+                                goldPopup.classList.add('visible');
+                            });
+                            // Trigger only once
+                            observer.disconnect();
+                        }
+                    });
+                }, { threshold: 0.5 }); // Trigger when 50% visible
+
+                observer.observe(triggerText);
+            }
 
             closeGold.addEventListener('click', () => {
                 goldPopup.classList.remove('visible');
