--- a/index.html
+++ b/index.html
@@ -777,9 +777,9 @@
     </div>
 
     <!-- Gold Certificate Badge -->
-    <div style="display: flex; justify-content: flex-start; margin-bottom: 2rem;">
+    <div class="gold-badge" style="display: flex; align-items: center; justify-content: center; margin-bottom: 1rem;">
         <img src="assets/images/gold.png" alt="Certificación Premium - Gestoría Vehicular"
-            style="max-width: 200px; width: 100%; height: auto; filter: drop-shadow(0 4px 12px rgba(0,0,0,0.15));"
+            style="max-width: 150px; width: 100%; height: auto; margin-left: 1rem; margin-right: 1rem; filter: drop-shadow(0 4px 12px rgba(0,0,0,0.15));"
             loading="lazy" decoding="async">
     </div>
 
