--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestoría Vehicular CDMX y Edomex | Trámites Rápidos y Seguros</title>
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/images/favicon.svg" type="image/svg+xml">
+    <link rel="alternate icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="description"
         content="Gestoría vehicular #1 en CDMX y Edomex. Placas, Cambio de Propietario, Legalización de Autos Americanos y Licencias. ¡Trámites sin filas y 100% seguros!">
     <meta name="keywords"
@@ -19,7 +22,9 @@
     <meta property="og:title" content="Gestoría Vehicular CDMX y Edomex | Trámites Rápidos y Seguros">
     <meta property="og:description"
         content="Gestoría vehicular experta en CDMX y Edomex. Alta de placas, cambio de propietario y licencias sin filas ni estrés.">
-    <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/og-image.jpg">
+    <meta property="og:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
+    <link rel="apple-touch-icon" href="assets/images/logo.jpg">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -27,7 +32,7 @@
     <meta property="twitter:title" content="Gestoría Vehicular CDMX y Edomex | Trámites Rápidos y Seguros">
     <meta property="twitter:description"
         content="Olvídate de las filas. Gestionamos tus trámites vehiculares en CDMX y Edomex de forma rápida y segura.">
-    <meta property="twitter:image" content="https://gestordeautos.com.mx/assets/images/og-image.jpg">
+    <meta property="twitter:image" content="https://gestordeautos.com.mx/assets/images/logo.jpg">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -93,7 +98,8 @@
         <div class="container nav">
             <a href="#" class="logo">
                 <div class="logo-container">
-                    <img src="assets/images/logo.jpg" alt="Gestor de Autos Logo" class="logo-img">
+                    <img src="assets/images/logo.jpg" alt="Gestor de Autos Logo" class="logo-img" width="50"
+                        height="50">
                 </div>
                 <div class="logo-text">
                     <div class="site-title">Gestor de <span>Autos</span></div>
@@ -160,7 +166,7 @@
                 <div class="hero-visual hidden-mobile">
                     <!-- Overlapping composition -->
                     <img src="assets/images/moto-deportiva-azul.png" alt="Moto Deportiva Gestor de Autos"
-                        class="hero-moto">
+                        class="hero-moto" fetchpriority="high" width="600" height="400">
                 </div>
             </div>
             </div>
